--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -45,29 +45,30 @@
   </nav>
   <!-- Navbar End -->
   <div appScrollspy [spiedTags]="['SECTION']" (sectionChange)="onSectionChange($event)">
+
     <!-- Hero Start -->
-    <section class="hero-1-bg" style="background-image: url(assets/images/hero-1-bg-img.png)" id="home">
+    <section
+      class="hero-5-bg d-flex vh-100 mx-auto flex-column align-items-center justify-content-center position-relative"
+      id="home" style="background: url(assets/images/hero-5-bg-img.jpg) center center">
+      <div class="bg-overlay"></div>
+      <div class="bg-hero-overlay"></div>
       <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-lg-6">
-            <h1 class="hero-1-title text-dark font-weight-bold text-shadow mb-4">Creative Landing Page</h1>
-            <div class="w-75 mb-5 mb-lg-0">
-              <p class="text-muted mb-5 pb-5 font-size-17">A creative & modern landing page with Lezir template & We
-                love
-                make things amazing.</p>
-              <p class=""><span class="font-size-20 mr-2">🥳️</span>Nemo enim ipsam voluptatem quia voluptas sit
-                aspernatur that is fugit.</p>
-              <div class="subscribe-form">
-                <form action="#">
-                  <input type="text" placeholder="Enter  email...">
-                  <button type="submit" class="btn btn-primary">Subscribe</button>
-                </form>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-10">
-            <div class=" mt-5 mt-lg-0">
-              <img src="assets/images/hero-1-img.png" alt="" class="img-fluid d-block mx-auto">
+        <div class="row align-items-center">
+          <div class="col-xl-6">
+            <div class="hero-content">
+              <h1 class="text-dark hero-5-title text-shadow line-height-1_4 mb-4">We Help Startups Launch Their Products
+              </h1>
+              <p class="text-muted mb-4">On the other hand as we denounce with righteous indignation and dislike men who
+                are beguiled.</p>
+              <p class="text-muted font-size-15">
+                <i-feather class="icon-xs icon mr-1 text-success" name="pie-chart"></i-feather>
+                Temporibus autem quibusdam et aut officiis.
+              </p>
+              <p class="text-muted font-size-15">
+                <i-feather class="icon-xs icon mr-1 text-success" name="triangle"></i-feather>
+                Sed ut perspiciatis unde omne.
+              </p>
+              <a href="javascript: void(0);" class="btn btn-primary mt-4">Get Started</a>
             </div>
           </div>
         </div>
@@ -141,7 +142,7 @@
         <h4 class="text-uppercase text-primary"><b>Register</b></h4>
       </div>
       <div class="login-form mt-4">
-        <form>
+        <form action="/">
           <div class="form-group">
             <label for="exampleInputUsername">User Name</label>
             <input type="text" class="form-control" id="exampleInputUsername" placeholder="Enter Name">
@@ -181,8 +182,7 @@
               </a></li>
             <li class="list-inline-item"><a href="javascript: void(0);" class="login-social-icon icon-success">
                 <i-feather class="icon-xs" name="linkedin"></i-feather>
-              </a>
-            </li>
+              </a></li>
           </ul>
         </div>
       </div>
