--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -14,7 +14,7 @@
       <div class="col-lg-4">
         <div class="pricing-box rounded text-center p-4">
           <div class="pricing-icon-bg my-4">
-            <i class="mdi mdi-account h1"></i>
+            <i class="pi pi-check"></i>
           </div>
           <h4 class="title mb-3">Simple</h4>
           <h1 class="font-weight-bold mb-0"><b><sup class="h4 mr-2 font-weight-bold">$</sup>19</b></h1>
