--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -68,7 +68,7 @@
                 <i-feather class="icon-xs icon mr-1 text-success" name="triangle"></i-feather>
                 Sed ut perspiciatis unde omne.
               </p>
-              <a href="javascript: void(0);" class="btn btn-primary mt-4">Get Started</a>
+              <a (click)='goToOffers()' class="btn btn-primary mt-4">Je compare les offres</a>
             </div>
           </div>
         </div>
