--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -72,6 +72,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar-custom .logo .ligo-light {
   display: inline-block;
+  height: 3rem !important;
 }
 
 .navbar-custom .navbar-nav li a {
