--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -20,7 +20,7 @@ $black:               #000;
 
 
 $primary:             #5ad9ac;
-$secondary:           #6c757d;
+$secondary:           #273152;
 $success:             #14cf9f;
 $info:                #4fccdc;
 $warning:             #ffbb13;
