--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -17,7 +17,7 @@
       </ng-template>
       <ng-template let-product pTemplate="item">
 
-        <div class="product-item">
+        <div class="product-item offerCarousel">
           <div class="product-item-content">
             <div>
               <div class="pricing-box rounded text-center p-4">
@@ -25,8 +25,8 @@
                   <i class="pi pi-check"></i>
                 </div>
                 <h4 class="title mb-3">{{product.name}}</h4>
-                <h1 class="font-weight-bold mb-0"><b><sup class="h4 mr-2 font-weight-bold">$</sup>{{product.price}}</b></h1>
-                <p class="text-muted font-weight-semibold">User / Month</p>
+                <p ><b  class="montantOffer"><sup class="h4 mr-2  ">€</sup>{{product.price}}</b>  <span style="font-size: 20px;"> / mois</span></p>
+              
                 <ul class="list-unstyled pricing-item mb-4">
                   <li class="text-muted">Bandwidth: 1GB</li>
                   <li class="text-muted">Onlinespace: 500MB</li>
