--- a/src/assets/scss/_pricing.scss
+++ b/src/assets/scss/_pricing.scss
@@ -1,4 +1,4 @@
-/* 
+/*
 // 9. Pricing
 */
 
@@ -12,9 +12,9 @@
         background: rgba($primary, 0.12);
         color: $primary;
         display: block;
-        height: 80px;
-        width: 80px;
-        line-height: 100px;
+        height: 60px;
+        width: 60px;
+        line-height: 65px;
         margin: 0 auto;
         border-radius: 20% 20% 4% 20% / 20% 20% 4% 20%;
         box-shadow: 0 0 0 7px rgba($primary, 0.03);
@@ -23,6 +23,7 @@
     .pricing-item {
         li {
             padding: 10px 0;
+            float: left;
         }
     }
     .pr-btn {
