--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,4 @@
-/* 
+/*
 // variables.scss
 */
 
@@ -25,7 +25,7 @@ $success:             #14cf9f;
 $info:                #4fccdc;
 $warning:             #ffbb13;
 $danger:              #f43958;
-$dark:                #3b3950;
+$dark:                #273152;
 $muted:               #9e9cb9;
 $light:               #fbfafd ;
 $body-bg:             #ffffff;
@@ -57,5 +57,5 @@ $text-shadow: 3px 3px 6px rgba(14, 10, 65, 0.25);
 
 
 // Font
-$font-primary:            'Quicksand', sans-serif;
-$font-secondary:          'Muli', sans-serif;
+$font-primary:            'Muli', sans-serif;
+$font-secondary:          'Quicksand', sans-serif;
