--- a/src/app/pages/offers/offers.component.html
+++ b/src/app/pages/offers/offers.component.html
@@ -4,41 +4,151 @@
   <div class="container">
 
     <div class="row align-items-center">
-      <div class="col-lg-6">
+      <div class="col-lg-4">
         <div class="mb-4 mb-lg-0">
           <img src="assets/images/features-img.png" alt="" class="img-fluid d-block mx-auto">
         </div>
       </div>
 
-      <div class="col-lg-5 offset-lg-1">
+      <div class="col-lg-7 offset-lg-1">
         <p-steps   [model]="items"  [(activeIndex)]="activeIndex"></p-steps>
         <br/>
-        <!--First Step-->
+        <!--Months Step-->
         <div *ngIf='activeIndex == 0'>
               <h3 class="font-weight-semibold line-height-1_4 mb-4">Choisissez vos <b>mensualités</b></h3>
               <p class="text-muted font-size-15 mb-4">la durée minimum est de 24 mois ainsi la durée maximum est de 96mois  </p>
 
               <p class="text-muted">
-                <i-feather class="icon-xs mr-1" name="calendar"></i-feather> Mensualité : <b>{{params.mensualite}}</b>
+                <fa-icon class="icon-xs mr-2"  [icon]="faMonthIcon"></fa-icon> Mensualité : <b>{{params.nbrMois}}</b>
               </p>
-              <p-slider   (onChange)="handleChange($event)" [(ngModel)]="params.mensualite"  [step]="12" [min]="24" [max]="96" > </p-slider>
-          
-      
-            
+              <p-slider   (onSlideEnd)="handleChange()" [(ngModel)]="params.nbrMois" [step]="12" [min]="params.minDure" [max]="params.maxDure" > </p-slider>
+
+
+
        </div>
 
-        <!--Second Step-->
+        <!--Amount Step-->
         <div *ngIf='activeIndex == 1'>
           <h3 class="font-weight-semibold line-height-1_4 mb-4">Choisissez le  <b>montant</b> souhaité</h3>
           <p class="text-muted font-size-15 mb-4">la marge des montants est relative aux mensualités indiquées </p>
 
-        
-       
+
+
           <p class="text-muted">
-            <i-feather class="icon-xs mr-1" name="dollar-sign"></i-feather> Montant : <b>{{params.montantTotal}}</b>
+            <fa-icon class="icon-xs mr-2"  [icon]="faMoneyIcon"></fa-icon>Montant : <b>{{params.montantTotal}}</b>
           </p>
-          <p-slider (onChange)="handleChange($event)" [(ngModel)]="params.montantTotal"  [step]="12" [min]="24" [max]="96"> </p-slider>
-        
+          <p-slider (onSlideEnd)="handleChange()"  [(ngModel)]="params.montantTotal" [step]="100" [min]="params.minDarte" [max]="params.maxDarte"> </p-slider>
+
+        </div>
+
+        <!--offers Step-->
+        <div *ngIf='activeIndex == 2'>
+          <h3 class="font-weight-semibold line-height-1_4 mb-4">Choisissez l'<b>offre</b> qui vous correspond</h3>
+          <p class="text-muted font-size-15 mb-4">les frais de services sont fixes , les frais de priorités ne dépendent pas du montant choisi</p>
+
+
+
+          <p-carousel [value]="offers" [numVisible]="3" [numScroll]="3" [circular]="false"
+          [responsiveOptions]="responsiveOptions">
+
+          <ng-template  let-offer pTemplate="item">
+
+            <div class="offerCarousel">
+              <div class="offer-item-content">
+                <div>
+                  <div class="pricing-box rounded text-center p-4">
+                    <div class="pricing-icon-bg my-3">
+                      #1
+                    </div>
+
+                    <h4 class="title mb-3">
+                      <div   class="collectTitle">Mois de collection :</div>
+                      <span *ngIf="offer.phaseDeb != offer.phaseFin ; else FinMois" >[{{offer.phaseDeb}} - {{offer.phaseFin}}]</span>
+                      <ng-template #FinMois>
+                      <span  >{{offer.phaseDeb}}</span>
+                      </ng-template>
+                    </h4>
+                    <div class="priceZone">
+                    <p ><b  class="montantOffer"><sup class="h4 mr-2  ">€</sup>{{offer.totalFrais}}</b>  <span style="font-size: 20px;"> / mois</span></p>
+                    </div>
+
+                    <ul class="list-unstyled pricing-item mb-4 detailZone">
+                      <h5 class="detailOffer ">Details par mois :</h5>
+                      <li class="text-muted detailOffer"><i class="pi pi-check" style="color: #5ad9ac"></i>
+                         Mensualité : <span class="detailFrais">{{params.mensualite}} €</span>
+                      </li>
+                      <li class="text-muted detailOffer"> <i class="pi pi-check" style="color: #5ad9ac"></i>
+                        Frais Service : <span class="detailFrais">{{offer.fraisService}}€</span>
+                      </li>
+                      <li class="text-muted detailOffer"><i class="pi pi-check" style="color: #5ad9ac"></i>
+                        Frais Priorité : <span class="detailFrais">{{offer.fraisPriorite}}€</span>
+                      </li>
+                    </ul>
+                    <a href="javascript: void(0);" class="btn btn-outline-primary pr-btn">S'inscrire</a>
+                    <div class="mt-4">
+                      <div class="hero-bottom-img">
+                        <img src="assets/images/pricing-bottom-bg.png" alt="" class="img-fluid d-block mx-auto">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </ng-template>
+        </p-carousel>
+
+        </div>
+        <!--infos Step-->
+        <div *ngIf='activeIndex == 3'>
+        <form>
+          <div class="row">
+
+                <p-radioButton class="ml-2"   name="sexe" value="H" [(ngModel)]="demande.sexe" inputId="homme"></p-radioButton>
+                <label class="ml-1"   for="Homme">Mr</label>
+
+                <p-radioButton class="ml-3"   name="sexe" value="F"  [(ngModel)]="demande.sexe"  inputId="femme"></p-radioButton>
+                <label class="ml-1"   for="femme">Mme</label>
+
+         </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="name">Nom*</label>
+                <input id="name" type="text" class="form-control" autocomplete="off" placeholder="votre nom ...">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="Prenom">Prénom*</label>
+                <input id="Prenom" type="text" class="form-control" autocomplete="off" placeholder="Votre prénom...">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="telephone">Téléphone*</label>
+                <input id="telephone" type="number" class="form-control" autocomplete="off" placeholder="(+33) ...">
+
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="email">Email*</label>
+                <input id="email" type="email" class="form-control" autocomplete="off" placeholder="votre email...">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="form-group">
+                <label for="comments">Message*</label>
+                <textarea id="comments" rows="4" class="form-control" placeholder="Your message..."></textarea>
+              </div>
+            </div>
+          </div>
+        </form>
         </div>
        <div  class="row navigateOffer">
         <div class="col-4">
