--- a/src/app/pages/offers/offers.component.scss
+++ b/src/app/pages/offers/offers.component.scss
@@ -7,6 +7,14 @@
     .prevButton {
         float: left;
     }
+    .iconRight {
+      margin-right: -0.5rem  !important;
+      vertical-align: middle;
+    }
+    .iconLeft {
+      margin-left: -0.5rem  !important;
+      vertical-align: middle;
+    }
 }
 
 .disableButton {
@@ -40,3 +48,4 @@
   margin-left: 10px;
 
 }
+
