--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -1,4 +1,4 @@
-/* 
+/*
 // 1. General
 */
 
@@ -18,6 +18,6 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: $font-secondary;
+    font-family: $font-primary;
     font-weight: 700;
 }
